2004-02-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/pwg/building-boiler.xml: fix cvs checkout documentation

2004-02-06  David Schleef  <ds@schleef.org>

	* docs/random/ds/0.9-suggested-changes: Random ramblings
	* gst/elements/gstfilesrc.c: (gst_filesrc_get_mmap): Cast size_t
	to int before printing.
	* gst/parse/grammar.y: Fix gcc-2.95 style variadic macros.
	* gst/parse/parse.l: same.  See bug #129600

2004-02-06  David Schleef  <ds@schleef.org>

	* gst/gstindex.c: (gst_index_add_format), (gst_index_add_id),
	(gst_index_add_entry), (gst_index_add_associationv),
	(gst_index_add_association): Add gst_index_add_associationv()
	and clean up gst_index_add_association(). #127133

2004-02-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* autogen.sh: check out common with right tag if CVS/Tag exists

2004-02-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* testsuite/ghostpads/ghostpads.c: (main):
          fix testsuite from segfaulting

2004-02-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am: add release target
	* configure.ac: bump nano to 1
	* docs/random/release:

2004-02-06  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstcaps.h:
	* gst/gstelement.c: (gst_element_base_class_init),
	(gst_element_class_set_details), (gst_element_clear_pad_caps):
	* gst/gstpad.c: (gst_pad_link_intersect), (gst_pad_link_fixate),
	(gst_pad_try_set_caps), (gst_pad_can_link_filtered),
	(gst_real_pad_dispose):
	* gst/gststructure.c: (gst_structure_free),
	(gst_structure_from_string):
	  put reverted patch back in
	* gst/gstelement.c: (gst_element_remove_pad):
	  free explicit caps if they're set
	* gst/gstpad.c: (_gst_pad_default_fixate_func):
	  copy the structure when fixating

2004-02-05  David Schleef  <ds@schleef.org>

	* gst/gstmarshal.list:
	* gst/gstpad.c: (gst_real_pad_class_init),
	(_gst_real_pad_fixate_accumulator):
	Revert POINTER->BOXED change in signal marshaller.

=== gstreamer 0.7.4 ===