@@ -361,6 +361,10 @@ gst_queue_locked_flush (GstQueue *queue)
 {
   while (!g_queue_is_empty (queue->queue)) {
     GstData *data = g_queue_pop_head (queue->queue);
+    /* First loose the reference we added when putting that data in the queue */
+    gst_data_unref (data);
+    /* Then loose another reference because we are supposed to destroy that
+       data when flushing */
     gst_data_unref (data);
   }
   queue->timeval = NULL;
